--- a/webpacksetup/package.json
+++ b/webpacksetup/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@types/core-js": "^2.5.5",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.0",
     "file-loader": "^6.2.0",
@@ -24,6 +26,14 @@
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@babel/runtime": "^7.16.0",
+    "antd": "^4.16.13",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "less-vars-to-js": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0"
