--- a/webpack_task1/package.json
+++ b/webpack_task1/package.json
@@ -29,6 +29,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/runtime": "^7.16.0",
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "less": "^4.1.2",
@@ -36,6 +37,9 @@
     "less-vars-to-js": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
+    "redux": "^4.1.2"
   }
 }
