--- a/webpack_task1/package.json
+++ b/webpack_task1/package.json
@@ -1,10 +1,11 @@
-{
+ {
   "name": "webpacksetup",
   "version": "1.0.0",
   "description": "Initial Webpack setup for react",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack serve --mode development"
+    "serve": "webpack serve --config webpack.dev.js",
+    "build": "webpack build --config webpack.prod.js"
   },
   "author": "Samuel Gill",
   "license": "ISC",
@@ -18,12 +19,11 @@
     "css-loader": "^6.5.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "sass": "^1.43.4",
-    "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0"
+    "webpack-dev-server": "^4.4.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
