--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpacksetup",
+  "name": "addressbook",
   "version": "1.0.0",
   "description": "Initial Webpack setup for react",
   "main": "index.js",
@@ -65,5 +65,13 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/samuelgill1996/address-book-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/samuelgill1996/address-book-app/issues"
+  },
+  "homepage": "https://github.com/samuelgill1996/address-book-app#readme"
 }
